<resources>
    <string name="app_name">Pomodoro</string>
    <string name="startPomodoro">Iniciar Pomodoro</string>
    <string name="stopPomodoro">Detener Pomodoro</string>
    <string name="startShortbreak">Iniciar descanso corto</string>
    <string name="stopShortbreak">Detener descanso corto</string>
    <string name="startLongbreak">Iniciar descanso largo</string>
    <string name="stopLongbreak">Detener descanso largo</string>


    <string name="pref_settings">Configuración</string>
    <string name="pref_volume">Volumen de alarma</string>
    <string name="pref_vibration">Vibración</string>
    <string name="pref_vibration_summary">Activar o desactivar la vibración</string>
    <string name="pref_shortbreakTime">Tiempo descanso corto</string>
    <string name="pref_shortbreakTime_summary">Establecer el tiempo para el descanso corto</string>
    <string name="pref_longbreakTime">Tiempo descanso largo</string>
    <string name="pref_longbreakTime_summary">Establecer el tiempo para el descanso largo</string>
    <string name="pref_debugMode">Modo Debug</string>
    <string name="pref_debugMode_summary">Mostrar el reloj en minutos o segundos</string>

    <string name="notification_title">Se acabó el tiempo</string>
    <string name="notification_information">Es hora de cambiar de actividad</string>

</resources>